images + stats page

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -49,7 +49,7 @@
         <div class="card text-center">
             <div class="card-body">
                 <h1 class="card-title">Арендный счет</h1>
-                <h3 class="card-text">120 021₽</h3>
+                <h3 class="card-text">120,021₽</h3>
                 <a class="btn btn-light mt-1 w-75">Пополнить счет</a>
             </div>
         </div>
