--- a/web/templates/stats.html
+++ b/web/templates/stats.html
@@ -7,38 +7,62 @@
 {% endblock %}
 
 {% block js %}
+<link href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css" rel="stylesheet">
+
+<script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table-locale-all.min.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.18.3/dist/extensions/export/bootstrap-table-export.min.js"></script>
+
+<!--<script src="https://unpkg.com/bootstrap-table@1.15.3/dist/extensions/natural-sorting/bootstrap-table-natural-sorting.min.js"></script>-->
+
 <script type="text/javascript" src="{{ url_for('static', filename='js/stats.js') }}"></script>
 {% endblock %}
 
 {% block content %}
 <h2>Арендаторы</h2>
-<table class="table table-hover">
-  <thead>
+<table id="table"
+       data-sortable="true"
+       data-toggle="table"
+       data-search="true"
+       data-show-columns="true"
+       data-locale="ru-RU"
+       data-show-pagination-switch="true"
+       data-pagination="true"
+       data-id-field="id"
+       data-sort-order="desc"
+       data-page-list="[10, 25, 50, 100, all]"
+       class="table table-hover">
+    <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">Имя</th>
-      <th scope="col">Текущий баланс</th>
-      <th scope="col">Handle</th>
+        <th scope="col" id="id">#</th>
+        <th scope="col" data-sortable="true">Имя</th>
+        <th scope="col" data-sortable="true" data-sorter="priceSorter">Баланс</th>
+        <th scope="col" data-sortable="true" data-sorter="priceSorter">Оплата аренды за месяц</th>
+        <th scope="col" data-sortable="true" data-sorter="priceSorter">Доход за месяц</th>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
+    {% for i in range(1, 10) %}
     <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+        <th scope="row">{{ i }}</th>
+        <td><a href="/renter/{{ i }}">ООО "Быстро Бургер"</a></td>
+        <td>{{ i*2643+1020 }}₽</td>
+        <td style="color: red;">-27,124₽</td>
+        <td style="color: green;">+45,540₽</td>
     </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
+    {% endfor %}
+    <!--    <tr>-->
+    <!--      <th scope="row">2</th>-->
+    <!--      <td>Jacob</td>-->
+    <!--      <td>Thornton</td>-->
+    <!--      <td>@fat</td>-->
+    <!--    </tr>-->
+    <!--    <tr>-->
+    <!--      <th scope="row">3</th>-->
+    <!--      <td colspan="2">Larry the Bird</td>-->
+    <!--      <td>@twitter</td>-->
+    <!--    </tr>-->
+    </tbody>
 </table>
 {% endblock %}
