--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,7 +19,7 @@
             </h2>
 
             <div class="card-body transaction-block">
-                {% for i, trans in enumerate(transactions) %}
+                {% for i, trans in transactions %}
                 <div class="row align-items-center">
                     <div class="col-3 col-date">
                         <p>4 Марта</p>
