add time counter and new records in db

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -72,7 +72,7 @@
                         <p>{{ "{:,.2f}₽".format(tariff*30) }}</p>
                         <p>{{ "{:,.2f}₽".format(tariff) }}</p>
                         <p>{{ balance//tariff }} дн</p>
-                        <p>5 ч 12 мин</p>
+                        <p>{{ next_upd }}</p>
                     </div>
                 </div>
             </div>
