remove balance editing input & hotfix

--- a/web/templates/renter.html
+++ b/web/templates/renter.html
@@ -24,8 +24,8 @@
 <form method="post">
     <table class="table">
         <tr>
-            <th><label for="balance">Баланс</label></th>
-            <td><input id="balance" type="number" value="{{ balance }}" name="balance"></td>
+            <th>Баланс</th>
+            <td>{{ balance }}</td>
         </tr>
         <tr>
             <th><label for="tariff">Тариф</label></th>
