--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -51,7 +51,7 @@
             <div class="card-body">
                 <h1 class="card-title">Арендный счет</h1>
                 <h3 class="card-text">{{ "{:,.2f}₽".format(balance) }}</h3>
-                <a class="btn btn-light mt-1 w-75">Пополнить счет</a>
+                <button class="btn btn-light mt-1 w-75" onclick="buy()">Пополнить счет</button>
             </div>
         </div>
     </div>
