add withdraw button

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -52,6 +52,7 @@
                 <h1 class="card-title">Арендный счет</h1>
                 <h3 class="card-text">{{ "{:,.2f}₽".format(balance) }}</h3>
                 <button class="btn btn-light mt-1 w-75" onclick="buy()">Пополнить счет</button>
+                <button class="btn btn-light mt-1 w-75" onclick="withdraw()">Снять со счета</button>
             </div>
         </div>
     </div>
