--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block js %}
+<script type="text/javascript" src="{{ url_for('static', filename='js/libs/web3.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
 
