just remove registration from the main menu

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -40,8 +40,7 @@
             {% if current_user.is_authenticated %}
                 <a href="/logout" type="button" class="btn btn-light mx-3">Выйти</a>
             {% else %}
-                <a href="/login" type="button" class="btn btn-light mx-3">Войти</a>
-                <a href="/register" type="button" class="btn btn-dark mx-3">Зарегистрироваться</a>
+                <a href="/login" type="button" class="btn btn-dark mx-3">Войти</a>
             {% endif %}
             </div>
     </nav>
