--- a/web/templates/renter.html
+++ b/web/templates/renter.html
@@ -35,6 +35,7 @@
         </tr>
     </table>
     <button type="submit" class="btn btn-dark">Сохранить</button>
+    <input name="delete" type="submit" class="btn btn-danger" value="Удалить арендатора">
 </form>
 {% endif %}
 {% endblock %}
