--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -41,8 +41,7 @@
             {% if is_admin %}
                 <p style="margin: 0;">Доступно к списанию: {{ "{:,.2f}₽".format(admin_balance) }}</p>
                 <div class="mx-3">
-                    <input type="number" step="0.01" value="0"
-                                                  id="withdraw-amount">
+                    <input type="number" value="0" id="withdraw-amount">
                 </div>
                 <button class="btn btn-light mx-3"
                         onclick="withdraw($('#withdraw-amount')[0].value)">Снять со счета
