--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -63,12 +63,12 @@
                     <h1 class="card-title">Арендный счет</h1>
                     <h3 class="card-text">{{ "{:,.2f}₽".format(balance) }}</h3>
                     <div class="vertical">
-                        <p class="mb-0 mx-2">Сумма для пополнения</p><input type="number" step="0.01" value="0" id="buy-amount">
+                        <p class="mb-0 mx-2">Сумма для пополнения</p><input type="number" value="0" id="buy-amount">
                     </div>
                     <button class="btn btn-dark mt-1 mb-4 w-75" onclick="buy($('#buy-amount')[0].value)">Пополнить счет
                     </button>
                     <div class="vertical">
-                        <p class="mb-0 mx-2">Сумма для снятия</p><input type="number" step="0.01" value="0" id="withdraw-amount">
+                        <p class="mb-0 mx-2">Сумма для снятия</p><input type="number" value="0" id="withdraw-amount">
                     </div>
                     <button class="btn btn-dark mt-1 mb-1 w-75" onclick="withdraw($('#withdraw-amount')[0].value)">Снять со
                         счета
