--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -23,26 +23,41 @@
                     {% for i, trans in transactions %}
                         <div class="row align-items-center">
                             <div class="col-3 col-date">
-                                <p>4 Марта</p>
-                                <p>12:20</p>
+                                <p>{{ trans.time }}</p>
                             </div>
                             <div class="vl-line"></div>
                             <div class="col-6">
                                 <div class="row align-items-center m-0">
-                                    <img class="mr-2" src="{{ url_for('static', filename='images/pending.svg') }}">
+                                    {% if trans.status == 1 %}
+                                        <img class="mr-2" src="{{ url_for('static', filename='images/ok.svg') }}">
+                                    {% else %}
+                                        <img class="mr-2" src="{{ url_for('static', filename='images/pending.svg') }}">
+                                    {% endif %}
                                     <div class="flex-column">
-                                        <p class="mb-0">Ожидает подтверждения</p>
+                                        {% if trans.status == 1 %}
+                                            <p class="mb-0">Подтверждено</p>
+                                        {% elif trans.status == 0 %}
+                                            <p class="mb-0">Возвращено</p>
+                                        {% elif trans.status == -1 %}
+                                            <p class="mb-0">Ожидает подтверждения</p>
+                                        {% elif trans.status == -2 %}
+                                            <p class="mb-0">Отменено</p>
+                                        {% endif %}
                                         <h5>0x8088c0...5356d271</h5>
                                     </div>
                                 </div>
                             </div>
                             <div class="vl-line"></div>
                             <div class="col-3">
-                                <p>{{ trans }}</p>
-                                <h4 class="mb-0">50,000 ₽</h4>
+                                {% if "payed" in trans.events %}
+                                    <h4 class="mb-0" style="color: green">
+                                        +{{ trans.events["payed"]["value"] }}₽</h4>
+                                {% elif "withdrawed" in trans.events %}
+                                    <h4 class="mb-0" style="color: red">-{{ trans.events["withdrawed"]["amount"] }}₽</h4>
+                                {% endif %}
                             </div>
                         </div>
-                    {% endfor %}v
+                    {% endfor %}
                 </div>
 
             </div>
@@ -52,14 +67,17 @@
                 <div class="card-body">
                     <h1 class="card-title">Арендный счет</h1>
                     <h3 class="card-text">{{ "{:,.2f}₽".format(balance) }}</h3>
-                    <div>
-                        <p>Сумма для пополнения</p><input type="number" step="0.01" value="0" id="buy-amount">
+                    <div class="vertical">
+                        <p class="mb-0 mx-2">Сумма для пополнения</p><input type="number" step="0.01" value="0" id="buy-amount">
                     </div>
-                    <button class="btn btn-light mt-1 w-75" onclick="buy($('#buy-amount')[0].value)">Пополнить счет</button>
-                    <div>
-                        <p>Сумма для снятия</p><input type="number" step="0.01" value="0" id="withdraw-amount">
+                    <button class="btn btn-dark mt-1 mb-4 w-75" onclick="buy($('#buy-amount')[0].value)">Пополнить счет
+                    </button>
+                    <div class="vertical">
+                        <p class="mb-0 mx-2">Сумма для снятия</p><input type="number" step="0.01" value="0" id="withdraw-amount">
                     </div>
-                    <button class="btn btn-light mt-1 w-75" onclick="withdraw($('#withdraw-amount')[0].value)">Снять со счета</button>
+                    <button class="btn btn-dark mt-1 mb-1 w-75" onclick="withdraw($('#withdraw-amount')[0].value)">Снять со
+                        счета
+                    </button>
                 </div>
             </div>
         </div>
@@ -71,16 +89,16 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-8">
-                            <p>Оплата в день:</p>
-                            <p>Заработано сегодня:</p>
-                            <p>Оплачено сегодня:</p>
+                            <p>Тариф в день:</p>
+                            <p>Доход за сегодня:</p>
                             <p>Выведено сегодня:</p>
+                            <p>Прибыль на конец дня:</p>
                         </div>
                         <div class="col-4">
                             <p>{{ "{:,.2f}₽".format(tariff) }}</p>
-                            <p>{{ "{:,.2f}₽".format(balance) }} руб</p>
-                            <p>{{ "{:,.2f}₽".format(balance) }} руб</p>
-                            <p>{{ "{:,.2f}₽".format(balance) }} руб</p>
+                            <p>{{ "{:,.2f}₽".format(total_payed) }} руб</p>
+                            <p>{{ "{:,.2f}₽".format(total_withdrawed) }} руб</p>
+                            <p>{{ "{:,.2f}₽".format(total_payed - total_withdrawed - tariff) }} руб</p>
                         </div>
                     </div>
                 </div>
